# eagle-swarm-phase-ii

./: .gitignore  README.md
.github/workflows/: static-validation.yml
.patch_backups/final_polish_20260716_183100/: adapter_px4_adapter.py  fault_run_fault_campaign.sh  full_run_full_acceptance_campaign.sh  launch_real_px4_swarm.launch.py  mission_mission_demo.py  start_start_integrated_demo.sh
docs/: ARCHITECTURE.md  ASSESSMENT_GAP_AUDIT.md  ASSESSMENT_SCORECARD.md  BOM_AND_90_DAY_PLAN.md  DEMO_SCRIPT.md  DIGITAL_TWIN.md  FAULT_TEST_MATRIX.md  FINAL_CHANGELOG.md  FINAL_HANDOFF.md  FINAL_SUBMISSION_CHECKLIST.md  INTEGRATED_DEMO.md  PERCEPTION_SCOPE.md  RANDOMIZED_CONTRACT_NET.md  REQUIREMENTS_TRACEABILITY.md  REVIEWER_QUICKSTART.md  SAFETY_SECURITY.md  STATIC_VALIDATION.md  SUBMISSION_MANIFEST.md  TECHNICAL_DEFENSE.md  TECHNICAL_REPORT.md  architecture_diagram.dot
evidence/: README.md  STATUS.md
scripts/: build_workspace.sh  check_dependencies.sh  collect_submission_evidence.sh  diagnose_integrated_demo.sh  final_submission_gate.sh  gcs_heartbeat.py  package_submission.sh  preflight_submission.sh  run_fault_campaign.sh  run_fault_scenario.sh  run_full_acceptance_campaign.sh  run_separation_acceptance.sh  start_integrated_demo.sh  stop_integrated_demo.sh
src/eagle_swarm_common/: package.xml  setup.cfg  setup.py
src/eagle_swarm_common/eagle_swarm_common/: coverage.py  policy.py
src/eagle_swarm_common/test/: test_coverage.py  test_policy.py
src/eagle_swarm_core/: package.xml  setup.cfg  setup.py
src/eagle_swarm_core/eagle_swarm_core/: agent.py  coordinator.py  go_to_target_server.py  mission_demo.py  role_manager.py  target_detector.py
src/eagle_swarm_core/launch/: real_px4_swarm.launch.py  swarm_logic.launch.py
src/eagle_swarm_dashboard/: package.xml  setup.cfg  setup.py
src/eagle_swarm_dashboard/eagle_swarm_dashboard/: dashboard.py  web_dashboard.py
src/eagle_swarm_msgs/: CMakeLists.txt  package.xml
src/eagle_swarm_msgs/action/: GoToTarget.action
src/eagle_swarm_msgs/msg/: Bid.msg  FaultEvent.msg  Heartbeat.msg  LeaderState.msg  SafetyEvent.msg  TargetBeacon.msg  TaskAward.msg
src/eagle_swarm_msgs/srv/: RequestRoleChange.srv
src/eagle_swarm_px4/: package.xml  setup.cfg  setup.py
src/eagle_swarm_px4/eagle_swarm_px4/: px4_adapter.py
src/eagle_swarm_px4/launch/: px4_swarm_bridge.launch.py  three_px4_adapters.launch.py
src/eagle_swarm_sim/: package.xml  setup.cfg  setup.py
src/eagle_swarm_sim/eagle_swarm_sim/: safety_monitor.py
src/eagle_swarm_sim/launch/: gazebo_world.launch.py  three_unit_world.launch.py
src/eagle_swarm_sim/models/confirmed_target/: model.sdf
src/eagle_swarm_sim/worlds/: eagle_swarm.sdf
src/eagle_swarm_tools/: package.xml  setup.cfg  setup.py
src/eagle_swarm_tools/eagle_swarm_tools/: evidence_report.py  inject_fault.py  scenario_runner.py
src/eagle_swarm_tools/test/: test_evidence_report.py
